--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,7 @@
 @import '@fontsource/fira-mono';
 
+/* TODO Clean up CSS, remove unused */
+
 :root {
 	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -14,6 +16,13 @@
 	--background-without-opacity: rgba(255, 255, 255, 0.7);
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
+
+	--interactive-height: 40px;
+	--interactive-width: 12rem;
+	--interactive-padding-y: 0;
+	--interactive-padding-x: 0.5rem;
+	--interactive-border: 2px solid black;
+	--interactive-border-radius: 4px;
 }
 
 body {
