--- a/src/app.css
+++ b/src/app.css
@@ -23,3 +23,31 @@ body {
 .rpgui-button--small {
 	height: 30px;
 }
+
+.rpgui-content .readme h1 {
+	text-align: start;
+	font-size: 1.5em;
+}
+
+.rpgui-content .readme h2 {
+	text-align: start;
+	font-size: 1.125em;
+}
+
+.rpgui-content .readme h3 {
+	text-align: start;
+	font-size: 1em;
+}
+
+.rpgui-content .readme h4 {
+	text-align: start;
+	font-size: 0.825em;
+}
+
+.rpgui-content .readme code {
+	background-color: #ffff00;
+	color: #000;
+	padding: 0.125em;
+	line-height: 1.25;
+	text-shadow: none;
+}
