RPGUI disables all text selection. Re-enabled it for code sections in the readme.
Changed it to 'all' instead of the default 'text' which auto-selects all of the text.

--- a/src/app.css
+++ b/src/app.css
@@ -51,3 +51,12 @@ body {
 	line-height: 1.25;
 	text-shadow: none;
 }
+
+.rpgui-content .readme code {
+	-webkit-touch-callout: default;
+	-webkit-user-select: all;
+	-khtml-user-select: all;
+	-moz-user-select: all;
+	-ms-user-select: all;
+	user-select: all;
+}
