--- a/src/lib/themes/rpg-ui/rpgui.css
+++ b/src/lib/themes/rpg-ui/rpgui.css
@@ -10,7 +10,8 @@ If not supported you can add backup via:
 <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 inside your html file.
 */
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+/*@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');*/
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700');
 /**
 * Customized scrollbars
 */
@@ -74,7 +75,10 @@ inside your html file.
 	background-position: center;
 	background-size: 100% 100%;
 	/* font size */
-	font-size: 1em;
+	/*font-size: 1em;*/
+	color: white;
+	font-size: 1.1em !important;
+	text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	/* default size and display */
 	max-width: 100%;
 	min-width: 140px;
@@ -237,7 +241,8 @@ inside your html file.
 	/*top: 0px;*/
 	/*position: fixed;*/
 	/*overflow: hidden;*/
-	font-size: 0.8em;
+	/*font-size: 0.8em;*/
+	letter-spacing: 2px;
 }
 
 /* general rules to apply on anything inside the content */
@@ -263,7 +268,10 @@ inside your html file.
 	image-rendering: -o-crisp-edges;
 	image-rendering: pixelated;
 	/* default font */
-	font-family: 'Press Start 2P', cursive;
+	/*font-family: 'Press Start 2P', cursive;*/
+	font-family: 'Cinzel', sans-serif;
+	font-size: 1em;
+	line-height: 0.8em;
 }
 
 /**
@@ -800,7 +808,7 @@ ul.rpgui-list-imp {
 .rpgui-content label {
 	/* color and border */
 	color: white;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 1em;
 	line-height: 20px;
 	display: inline;
