--- a/src/lib/themes/rpg-ui/rpgui.css
+++ b/src/lib/themes/rpg-ui/rpgui.css
@@ -440,7 +440,8 @@ label {
 .rpgui-dropdown-imp,
 .rpgui-dropdown {
 	/* font */
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	color: white;
 	/* default size */
 	min-height: 40px;
@@ -479,7 +480,8 @@ ul.rpgui-dropdown-imp {
 /* dropdown options */
 .rpgui-dropdown-imp li {
 	/* font */
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	color: white;
 	height: 16px;
 	/* remove the dot */
@@ -608,7 +610,8 @@ ul.rpgui-dropdown-imp {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	color: white;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 0.9em;
 	line-height: 32px;
 	background: #4e4a4e;
@@ -650,7 +653,8 @@ ul.rpgui-dropdown-imp {
 /* note! this class rule affect both the dropdown header and the list elements! */
 .rpgui-list-imp {
 	/* font */
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	color: white;
 	/* default size */
 	min-height: 40px;
@@ -681,7 +685,8 @@ ul.rpgui-list-imp {
 /* dropdown options */
 .rpgui-list-imp li {
 	/* font */
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	color: white;
 	height: 16px;
 	margin-left: 5px !important;
@@ -719,7 +724,8 @@ ul.rpgui-list-imp {
 .rpgui-content h1 {
 	/* color and border */
 	color: white;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 1.14em;
 	/* center text */
 	text-align: center;
@@ -732,7 +738,8 @@ ul.rpgui-list-imp {
 .rpgui-content h2 {
 	/* color and border */
 	color: white;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 1.25em;
 	/* center text */
 	text-align: center;
@@ -746,7 +753,8 @@ ul.rpgui-list-imp {
 	/* color and border */
 	color: white;
 	font-weight: 1;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 1.15em;
 	text-decoration: underline;
 	/* center text */
@@ -761,7 +769,8 @@ ul.rpgui-list-imp {
 	/* color and border */
 	color: white;
 	font-weight: 1;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 1em;
 	text-decoration: underline;
 	/* center text */
@@ -775,7 +784,8 @@ ul.rpgui-list-imp {
 .rpgui-content p {
 	/* color and border */
 	color: white;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 1em;
 	line-height: 22px;
 }
@@ -784,7 +794,8 @@ ul.rpgui-list-imp {
 .rpgui-content span {
 	/* color and border */
 	color: white;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 1em;
 	line-height: 22px;
 }
@@ -793,7 +804,8 @@ ul.rpgui-list-imp {
 .rpgui-content a {
 	/* color and border */
 	color: yellow;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 1em;
 	line-height: 22px;
 	text-decoration: none;
@@ -819,7 +831,8 @@ ul.rpgui-list-imp {
 	/* color and border */
 	margin-left: 20px;
 	color: white;
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+	/*text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;*/
+  text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
 	font-size: 1em;
 	line-height: 22px;
 }
