--- a/src/app.css
+++ b/src/app.css
@@ -64,9 +64,9 @@ body {
 
 .rpgui-content .readme code {
 	-webkit-touch-callout: default;
-	-webkit-user-select: all;
-	-khtml-user-select: all;
-	-moz-user-select: all;
-	-ms-user-select: all;
-	user-select: all;
+	-webkit-user-select: text;
+	-khtml-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
 }
