--- a/src/app.css
+++ b/src/app.css
@@ -32,39 +32,36 @@ body {
 	padding: 0;
 }
 
-.rpgui-content .readme h1 {
+.rpgui-content .markdown h1 {
 	margin: revert;
 	text-align: start;
 	font-size: 1.8em;
 }
 
-.rpgui-content .readme h2 {
+.rpgui-content .markdown h2 {
 	margin: revert;
 	text-align: start;
 	font-size: 1.5em;
 }
 
-.rpgui-content .readme h3 {
+.rpgui-content .markdown h3 {
 	margin: revert;
 	text-align: start;
 	font-size: 1.35em;
 }
 
-.rpgui-content .readme h4 {
+.rpgui-content .markdown h4 {
 	margin: revert;
 	text-align: start;
 	font-size: 1.2em;
 }
 
-.rpgui-content .readme code {
+.rpgui-content .markdown code {
 	background-color: #ffff00;
 	color: #000;
 	padding: 0.125em;
 	line-height: 1.25;
 	text-shadow: none;
-}
-
-.rpgui-content .readme code {
 	-webkit-touch-callout: default;
 	-webkit-user-select: text;
 	-khtml-user-select: text;
