--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 :root {
 	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--accent-color: #ff6200;
+	--accent-color: #ffc193;
 }
 
 body {
