--- a/src/app.css
+++ b/src/app.css
@@ -56,7 +56,8 @@ body {
 	font-size: 1.2em;
 }
 
-.rpgui-content .markdown code {
+.rpgui-content .markdown code,
+.rpgui-content .quest code {
 	background-color: #ffff00;
 	color: #000;
 	padding: 0.125em;
