--- a/src/app.css
+++ b/src/app.css
@@ -7,8 +7,7 @@
 @import '$lib/_workshop-internals/style/rpgui/rpgui.css';
 
 :root {
-	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: sans-serif;
 	--accent-color: #ffc193;
 }
 
