Fix color diff for checked checkboxes

--- a/src/lib/_workshop-internals/style/rpgui/rpgui.css
+++ b/src/lib/_workshop-internals/style/rpgui/rpgui.css
@@ -228,6 +228,7 @@ inside your html file.
 	background-size: auto 100%;
 	padding-left: 34px;
 	height: 24px;
+	filter: hue-rotate(60deg);
 }
 
 /* golden checkbox */
